Summary of important user-visible changes for releases of the signal package

===============================================================================
signal-1.3.0   Release Date: XXXX-XX-XX   Release Manager: TBD
===============================================================================

 ** The following functions are new:

      primitive

===============================================================================
signal-1.2.2   Release Date: 2013-03-25   Release Manager: Mike Miller
===============================================================================

 ** No change release to correct bad file permissions on previous release.

===============================================================================
signal-1.2.1   Release Date: 2013-03-17   Release Manager: Mike Miller
===============================================================================

 ** The following functions are new:

      buttap
      cheb1ap
      cheb2ap
      ellipap
      findpeaks
      fwht
      ifwht

 ** Improved Matlab compatibility for the following window functions:

      barthannwin
      blackmanharris
      blackmannuttall
      chebwin
      flattopwin
      nuttallwin

    The changes include always returning a column vector, returning a valid
    window for a length argument of 1, and making all arguments after the
    length optional.

 ** Minor updates to documentation for the following functions:

      cpsd
      mscohere
      sos2tf
      sos2zp
      tfestimate
      zp2sos


 ** signal is no longer dependent on the optim package.

===============================================================================
signal-1.2.0   Release Date: 2012-09-21   Release Manager: Carnë Draug
===============================================================================

 ** Improved Matlab compability for the function `fir2'. This changes include
    always returning vaues in a row (even when the smoothing window is a single